--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
     <h1>Alguns projetos</h1>
     <div id="btn-container">
-      <a href="https://github.com/elbiojuzao/Portifolio_estatico" id="btn-projects"><ion-icon name="fab fa-code-fork"></ion-icon><span>Portifolio Estático</span></a>
-      <a href="https://github.com/elbiojuzao/javascript-course/tree/main/conte%20uma%20piada" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Tell me a Joke</span></a>
-      <a href="https://github.com/elbiojuzao/javascript-course/tree/main/lightdark_mode" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Light and Dark Mode</span></a>
+      <a href="https://elbiojuzao.github.io/Portifolio_estatico/" id="btn-projects"><ion-icon name="fab fa-code-fork"></ion-icon><span>Portifolio Estático</span></a>
+      <a href="https://github.com/elbiojuzao/conte-uma-piada" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Tell me a Joke</span></a>
+      <a href="github.com/elbiojuzao/lightdark_mode" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Light and Dark Mode</span></a>
       <a href="https://github.com/elbiojuzao" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Acesso ao meu Git</span></a>
   </div>
 
