--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
     <h1>Alguns projetos</h1>
     <div id="btn-container">
-      <a href="https://elbiojuzao.github.io/Portifolio_estatico/" id="btn-projects"><ion-icon name="fab fa-code-fork"></ion-icon><span>Portifolio Estático</span></a>
-      <a href="https://github.com/elbiojuzao/conte-uma-piada" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Tell me a Joke</span></a>
-      <a href="github.com/elbiojuzao/lightdark_mode" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Light and Dark Mode</span></a>
-      <a href="https://github.com/elbiojuzao" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Acesso ao meu Git</span></a>
+      <a href="https://elbiojuzao.github.io/Portifolio_estatico/" target="_blank" id="btn-projects"><ion-icon name="fab fa-code-fork"></ion-icon><span>Portifolio Estático</span></a>
+      <a href="https://github.com/elbiojuzao/conte-uma-piada" target="_blank" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Tell me a Joke</span></a>
+      <a href="github.com/elbiojuzao/lightdark_mode" target="_blank" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Light and Dark Mode</span></a>
+      <a href="https://github.com/elbiojuzao" target="_blank" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon><span>Acesso ao meu Git</span></a>
   </div>
 
   </section>
