--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <!-- menu overlay -->
-  <div class="overlay overlay-slide-left" id="overlay">
+  <div class="overlay overlay-slide-right" id="overlay">
     <!-- menu itens -->
     <nav>
       <ul>
